layout fix for flicker testing

--- a/style.scss
+++ b/style.scss
@@ -27,10 +27,24 @@ body {
     color: #1f1f1f;
     font-family: "Kanit", sans-serif;
     font-size: 16px;
+
+    -webkit-overflow-scrolling: touch;
 }
+
+.fixed-wrapper {
+    position: fixed;
+    min-height: 100dvh;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 header {
     height: $nav-height;
     background-color: #eaeaea;
+    // position: absolute;
     position: fixed;
     top: 0px;
     left: 0px;
@@ -104,6 +118,7 @@ header {
     display: none;
 }
 .main-dock {
+    // position: absolute;
     position: fixed;
     bottom: 0px;
     left: 0px;
@@ -938,9 +953,11 @@ body.dark {
     background-color: $dark-color-one;
     color: #c4c4c4;
 }
-.dark header {
-    background-color: $dark-color-two;
-    border-color: #282828;
+.dark {
+    header {
+        background-color: $dark-color-two;
+        border-color: #282828;
+    }
 }
 .dark .crypto-list-header {
     background-color: $dark-color-one;
